# swo-lab-4

app/: WhiteBearMain.cc
docs/: mccabe-report-after.txt
ext/: ApprovalTests.hpp  CMakeLists.txt
src/: CMakeLists.txt  WhiteBear.cc  WhiteBear.h
src/items/: CheeseBrie.cc  CheeseBrie.h  ConjuredItem.cpp  ConjuredItem.h  Item.cc  Item.h  Legendary.cc  Legendary.h  Ticket.cc  Ticket.h
src/tests/: ConjuredItemUnitTests.cpp  ItemUnitTests.cpp
supporting_files/: ConcertTicketItem.h  IItem.h  NormalItem.h  WhiteBearCatch2ApprovalTests.cc
swo-lab4_KN/: CMakeLists.txt  README.md
swo-lab4_KN/app/: CMakeLists.txt  WhiteBearMain.cc
swo-lab4_KN/docs/: mccabe-report.txt
swo-lab4_KN/ext/: CMakeLists.txt
swo-lab4_KN/src/: CMakeLists.txt  WhiteBear.cc  WhiteBear.h
swo-lab4_KN/src/items/: CheeseBrie.cc  ConjuredItem.cpp  ConjuredItem.h  Item.cc  Item.h  Legendary.cc  Ticket.cc
swo-lab4_KN/src/tests/: CMakeLists.txt  CheeseBrieUnitTests.cpp  ItemUnitTests.cpp  LegendaryUnitTests.cpp  TicketUnitTests.cpp  WhiteBearUnitTests.cc
swo-lab4_KN/tests/: CMakeLists.txt  WhiteBearCatch2ApprovalTests.cc
tests/: WhiteBearCatch2ApprovalTests.cc  main.cc
tests/approval_tests/: WhiteBearCatch2ApprovalTests.WhiteBearApprovalTests.approved.txt
